Updating 'about' text Added 'votecode' info Removed some 'spindelman' references

--- a/public/404.html
+++ b/public/404.html
@@ -50,9 +50,9 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>Spindelman har supit bort den här hemsidan...</h1>
+    <h1>Den här sidan har rostat bort...</h1>
     <p>...eller så har du bara skrivit in fel adress.</p>
   </div>
-  <p>Är du spindelman? Kolla loggen för information!</p>
+  <p>Är du röstig? Kolla loggen för information!</p>
 </body>
 </html>
