--- a/public/422.html
+++ b/public/422.html
@@ -53,6 +53,6 @@
     <h1>Den ändringen är mot reglerna!</h1>
     <p>Du kanske försökte göra något du inte har befogenhet till.</p>
   </div>
-  <p>Om du är spindelman, kolla loggen för information.</p>
+  <p>Om du är röstig, kolla loggen för information.</p>
 </body>
 </html>
