--- a/public/500.html
+++ b/public/500.html
@@ -52,6 +52,6 @@
   <div class="dialog">
     <h1>Tyvärr, det där gick inte så bra :(</h1>
   </div>
-  <p>Om du är spindelman, kolla loggen för information.</p>
+  <p>Om du är röstig, kolla loggen för information.</p>
 </body>
 </html>
